repair a test (we now need a vehicle since we need its max speed for routing)